Fix Trino compilation failures in SleeperPageSink